The resume is changed

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 								<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 									<h2>Know more?</h2>
 									<p>You can get my full resume by clicking the button</p>
-									<p><a href="/images/resume.pdf" class="btn btn-default btn-lg">Resume</a></p>
+									<p><a href="/images/resume2.pdf" class="btn btn-default btn-lg">Resume</a></p>
 								</div>
 							</div>
 						</div>
