--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<li><span class="first-block">Phone:</span><span class="second-block">+91 9778596012</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">muhdadilstp@gmail.com</span></li>
 						<!-- <li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li> -->
-						<li><span class="first-block">Address:</span><span class="second-block">AL HASEENA,NB:VMUP School Muttam,670305,KL,IN</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Kannur, Kerala, IN</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
