--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 					<h2>Hello There!</h2>
 					<p>Easy as printing the first "Hello World" <br>
 
-						I am currently pursuing Computer Science Engineering specialized in Artificial Intelligence & Machine Learning at Sahyadri College Of Engineering & Management, Karnataka.<br>
-						
-						Technology excites me and i am always in awe of the change it drives in the world. Certain skills i have worked with include Web development( ReactJS , Python, MySQL ) , Windows OS, Linux OS. Currently i am working on my Machine Learning( Python) & Data Structure & Algorithms (Python). Always trying to be better on my own.<br>	
-						
-						Outside of tech I am tea lover , loves to move my body every day of week aIso i would choose anime over movies.</p>
+						Born in 2003 in the lively town of Kannur, Kerala, India, my journey has been driven by a deep passion and curiosity. <br>
+						Over the years, I've dedicated myself to honing my skills and exploring various creative and technical fields. <br>
+						This dedication has allowed me to transform ideas into reality, <br>
+						ensuring that every project I undertake resonates deeply with <br>
+						its audience and exceeds expectations.</p>
 					<!-- <p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p> -->
 					<p>
 						<ul class="fh5co-social-icons">
