--- a/index.html
+++ b/index.html
@@ -473,30 +473,31 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://github.com/MuhdAdil1/Ticket_Managment_Website.git" class="work" style="background-image: url(images/customer_ticket.png);">
+					<a href="https://github.com/MuhdAdil1/Ticket_Managment_Website.git" class="work" style="background-image: url(images/customer_ticket.jpeg);">
 						<div class="desc">
 							<h3>Customer Ticket Management</h3>
 							<!-- <span>Illustration</span> -->
 						</div>
 					</a>
 				</div>
-				<!-- <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
-						</div>
-					</a>
-				</div> -->
-				 <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/linkedin-clone.png);">
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/developer\ coding.jpeg);">
 						<div class="desc">
 							<h3>LinkedIn-Clone</h3>
 							<!-- <span>Illustration</span> -->
 						</div>
 					</a>
 				</div>
-				<!--<div class="col-md-3 text-center col-padding animate-box">
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://storyteller-eta.vercel.app/" class="work" style="background-image: url(images/ai_story.jpeg);">
+						<div class="desc">
+							<h3>AI Story Teller</h3>
+							<!-- <span>Brading</span> -->
+						</div>
+					</a>
+				</div>
+				 
+				<!-- <div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
